# osoyanlib

./: .travis.yml  CMakeLists.txt  README.MD  base64.c  base64.h  chars.c  chars.h  codecov.yml  file.c  file.h  memory.c  memory.h  osoyan.c  osoyan.h  string.c  string.h
crypt/: sha1.c  sha1.h
debug/: debug.h
include/audio/: note.h  wave.h
include/compress/: huffman.h
include/crypt/: sha1.h
include/debug/: console.h  debug.h  logger.h
include/geom/: rect.h
include/io/: file.h  path.h  print.h
include/list/: bitset.h  blob.h  dict.h  list.h  map.h  vector.h
include/memory/: memory.h
include/net/: http.h  websocket.h
include/string/: base64.h  chars.h  string.h  wchars.h  wstring.h
include/ui/: termui.h
include/util/: args.h  color.h  number.h  os.h
io/: console.h  file.c  file.h  logger.c  logger.h
list/: blob.c  blob.h  vector.c  vector.h
memory/: memory.c  memory.h
src/audio/: wave.c
src/compress/: huffman.c
src/crypt/: sha1.c
src/debug/: console.c  debug.c  logger.c
src/geom/: rect.c
src/io/: file.c  path.c  print.c
src/list/: bitset.c  blob.c  dict.c  map.c  vector.c
src/memory/: memory.c
src/net/: http.c  websocket.c
src/string/: base64.c  chars.c  string.c  wchars.c  wstring.c
src/ui/: termui.c
src/util/: args.c  color.c  number.c  os.c
string/: base64.c  base64.h  chars.c  chars.h  string.c  string.h
test/: test.c
